...
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Ingresar"
                android:textAllCaps="false"
                android:background="@color/Gris_5"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:elevation="2dp"/>

...
